--- a/nestjs-api/.env
+++ b/nestjs-api/.env
@@ -1,21 +1,17 @@
-# DATABASE_URL="postgresql://myuser:mypassword@postgres_db:5432/mydb?schema=public" # for docker-compose
-DATABASE_URL="postgresql://myuser:mypassword@localhost:5432/mydb?schema=public" # for local development
-
-
+DATABASE_URL="postgresql://myuser:mypassword@postgres_db:5432/mydb?schema=public" # for docker-compose
+# DATABASE_URL="postgresql://myuser:mypassword@localhost:5432/mydb?schema=public" # for local development
 REDIS_HOST=redis_cache
 REDIS_PORT=6379
 REDIS_URL=redis://redis:6379
-REDIS_HOST=localhost
-REDIS_URL=redis://localhost:6379 # for local development
-
 JWT_SECRET="jwt_super_secret"
 JWT_REFRESH_SECRET="jwt_refresh_super_secret"
 PORT=3000
+PORT_BCKEND=3000
 PORT_FRONTEND=3001
-
 POSTGRES_DB=mydb
 POSTGRES_USER=myuser
 POSTGRES_PASSWORD=mypassword
-
-
+FRONTEND_URL=http://192.168.11.107:3001
+FRONTEND_URL_STAGING=http://localhost:3001
+BACKEND_URL=http://192.168.11.107:3000
 
