--- a/nestjs-api/.env
+++ b/nestjs-api/.env
@@ -11,7 +11,7 @@ PORT_FRONTEND=3001
 POSTGRES_DB=mydb
 POSTGRES_USER=myuser
 POSTGRES_PASSWORD=mypassword
-FRONTEND_URL=http://192.168.11.107:3001
+FRONTEND_URL=http://localhost:3001
 FRONTEND_URL_STAGING=http://localhost:3001
-BACKEND_URL=http://192.168.11.107:3000
+BACKEND_URL=http://localhost:3000
 
